<resources>
    <string name="app_name">Super Touch</string>
    <string name="background_color">Background color</string>
    <string name="icon">Icon</string>
    <string name="custom_menu">Custom menu</string>
    <string name="device_admin_permistion">Device administration</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate app</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="change_color">Change color</string>
    <string name="another_time">Another time</string>
    <string name="ok">Ok</string>
    <string name="message_active_administration">If you activate this permission, the application will use it to
        authorize the screen lock operation, when you do not want to use it, you can come here to turn off, to remove
        the application you also need to turn it off, you have Agree to grant permission?
    </string>
    <string name="message_permission_device_admin">You need to enable this permission, if you do not agree, you can cancel, using
        a quick screen lock will not be accepted
    </string>
    <string name="space"> </string>
    <string name="accessibility_service_description">
        When you enable this permission the application will use it to manipulate
        Back, Home, recent applications and notifications
        Rest assured the application does not collect any of your information
    </string>
    <string name="notice_grant_device_admin">You need to grant device admin rights</string>
    <string name="warning_Accessibility">Find assistive touch and turn on the accessibility to make the button work
        properly
    </string>
    <string name="select_action">Select action</string>
    <string name="select_the_icon">Select the icon</string>
    <string name="ring_mode">Ring mode</string>
    <string name="control">Control</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>

    <string name="application">Application</string>
    <string name="lock_screen">Lock screen</string>
    <string name="multitasking">Multitasking</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="ring">Ring</string>
    <string name="silent">Silent</string>
    <string name="home">Home</string>
    <string name="notifications">Notification</string>
    <string name="empty"> </string>
</resources>
