<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:background="@android:color/white"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/_4sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp"
            >
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:id="@+id/img_change_background"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_custom_menu"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/black"
                android:text="@string/custom_menu"
                android:gravity="center"
                android:id="@+id/txt_change_background"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_40sdp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:background="@android:color/white"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/_4sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_2sdp">
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:id="@+id/img_change_icon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/black"
                android:text="@string/icon"
                android:gravity="center"
                android:id="@+id/txt_change_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_40sdp"/>
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerVertical="true"
                android:id="@+id/img_preview_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:src="@drawable/ic_launcher_background"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:background="@android:color/white"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/_4sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp"
            >
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:id="@+id/img_change_menu"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/black"
                android:text="@string/background_color"
                android:gravity="center"
                android:id="@+id/txt_change_menu"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_40sdp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:background="@android:color/white"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/_4sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_2sdp">
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:id="@+id/img_device_admin_permistion"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_device_admin_permistion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@android:color/black"
                android:text="@string/device_admin_permistion"
                android:gravity="center"
                android:id="@+id/txt_device_admin_permistion"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_40sdp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/sw_device_admin_permistion"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp">

            <ImageView
                android:id="@+id/img_privacy_policy"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_privacy_policy" />

            <TextView
                android:id="@+id/txt_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp">

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share" />

            <TextView
                android:id="@+id/txt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/white"
        android:layout_marginBottom="@dimen/_30sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_2sdp">

            <ImageView
                android:id="@+id/img_rate_app"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_rate_app" />

            <TextView
                android:id="@+id/txt_rate_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/rate_app"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>