<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:weightSum="3"
        android:id="@+id/layout_list_item_change_color"
        android:background="@drawable/bg_menu_view"
        android:gravity="center"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80sdp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="9"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
                <FrameLayout

                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:id="@+id/img_item_custom_1_1"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_panel_application"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_1_1"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/application"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">


                    <ImageView
                        android:id="@+id/img_item_custom_1_2"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_lock_screen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_1_2"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/lock_screen"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <ImageView
                        android:id="@+id/img_item_custom_1_3"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:id="@+id/txt_item_custom_1_3"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/setting"
                    android:layout_height="0dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="9"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <ImageView
                        android:id="@+id/img_item_custom_2_1"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_backspace"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_2_1"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:text="@string/back"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:id="@+id/img_item_custom_2_2"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_2_2"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:id="@+id/img_item_custom_2_3"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_ring"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_2_3"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/ring"
                    android:layout_height="0dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="9"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:id="@+id/img_item_custom_3_1"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_multitasking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_3_1"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/multitasking"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <ImageView
                        android:id="@+id/img_item_custom_3_2"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/txt_item_custom_3_2"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/home"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_weight="8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:id="@+id/img_item_custom_3_3"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_14sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <TextView
                    android:id="@+id/txt_item_custom_3_3"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:text="@string/notifications"
                    android:layout_height="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>